--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.foodmod.mango": "Mango",
-  "item.foodmod.salad": "Salad"
+  "item.foodmod.salad": "Salad",
+  "modmenu.updates": "Updates",
+  "modmenu.cosmo": "Cosmoclient Discord",
+  "item.foodmod.burger": "Burger"
 }
