--- a/src/main/resources/assets/foodmod/lang/de_de.json
+++ b/src/main/resources/assets/foodmod/lang/de_de.json
@@ -2,7 +2,7 @@
   "item.foodmod.mango": "Mango",
   "item.foodmod.lettuce": "Salat",
   "modmenu.updates": "Updates",
-  "modmenu.cosmo": "Cosmoclient Discord",
+  "modmenu.wiki": "Wiki",
   "item.foodmod.burger": "Burger",
   "item.foodmod.bun": "Burger Brötchen",
   "item.foodmod.flour": "Mehl",
