Last Push before Release :o

--- a/src/main/resources/assets/foodmod/lang/de_de.json
+++ b/src/main/resources/assets/foodmod/lang/de_de.json
@@ -22,5 +22,6 @@
   "item.foodmod.taco": "Taco",
   "item.foodmod.tortilla": "Tortilla",
   "item.foodmod.taco_shell": "Taco Schale",
-  "item.foodmod.salsa": "Salsa"
+  "item.foodmod.salsa": "Salsa",
+  "itemGroup.foodmod.main": "FoodMod"
 }
