50 Items in total WHOOOOOOOOooooooo

--- a/src/main/resources/assets/foodmod/lang/de_de.json
+++ b/src/main/resources/assets/foodmod/lang/de_de.json
@@ -38,6 +38,7 @@
   "item.foodmod.hotdog": "Hotdog",
   "item.foodmod.cereal": "Müsli",
   "item.foodmod.cheese": "Käse",
+  "item.foodmod.water": "Wasser",
   "item.foodmod.pizza_dough": "Pizza Teig",
   "item.foodmod.tomato_sauce": "Tomatensoße",
   "item.foodmod.cheese_pizza": "Käse Pizza",
