--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -25,6 +25,7 @@
   "item.foodmod.salsa": "Salsa",
   "itemGroup.foodmod.main": "FoodMod",
   "itemGroup.foodmod.pizza": "Pizza",
+  "item.foodmod.water": "Water",
   "item.foodmod.toast": "Toast",
   "item.foodmod.bread_dough": "Bread Dough",
   "item.foodmod.waffle_dough": "Waffle Dough",
