removed -lang: de_de added -stuff

--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.foodmod.mango": "Mango",
   "item.foodmod.lettuce": "Lettuce",
   "modmenu.updates": "Updates",
+  "modmenu.cosmo": "Cosmoclient Discord",
   "item.foodmod.burger": "Burger",
   "item.foodmod.bun": "Bun",
   "item.foodmod.flour": "Flour",
@@ -61,5 +62,7 @@
   "item.foodmod.peach": "Peach",
   "item.foodmod.orange_seeds": "Orange Seeds",
   "itemm.foodmod.organe_crop": "Orange Crop",
-  "item.foodmod.pizza_margherita.tooltip": "Old classic"
+  "item.foodmod.pizza_margherita.tooltip": "Old classic",
+  "item.foodmod.cereal.tooltip": "Very healthy!"
+
 }
