loot_tables and orange.json

--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -63,6 +63,5 @@
   "item.foodmod.orange_seeds": "Orange Seeds",
   "itemm.foodmod.organe_crop": "Orange Crop",
   "item.foodmod.pizza_margherita.tooltip": "Old classic",
-  "item.foodmod.cereal.tooltip": "Very healthy!"
-
+  "item.foodmod.orange": "Orange"
 }
