--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -65,6 +65,7 @@
   "item.foodmod.orange_seeds": "Orange Seeds",
   "itemm.foodmod.organe_crop": "Orange Crop",
   "item.foodmod.pizza_margherita.tooltip": "Old classic",
+  "item.foodmod.chocolate.tooltip": "Dark chocolate",
   "item.foodmod.orange": "Orange",
   "item.foodmod.strawberry_seeds": "Strawberry Seeds",
   "block.foodmod.strawberry_crop": "Strawberry Crop",
@@ -72,5 +73,6 @@
   "item.foodmod.fruit_salad": "Fruit Salad",
   "item.foodmod.grape_seeds": "Grape Seeds",
   "block.foodmod.grape_crop": "Grape Crop",
-  "item.foodmod.grape": "Grape"
+  "item.foodmod.grape": "Grape",
+  "item.foodmod.chocolate": "Chocolate"
 }
