--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -77,5 +77,6 @@
   "item.foodmod.chocolate": "Chocolate",
   "item.foodmod.apple_pie": "Apple Pie",
   "block.foodmod.rice_crop": "Rice Crop",
-  "item.foodmod.rice_seeds": "Rice Seeds"
+  "item.foodmod.rice_seeds": "Rice Seeds",
+  "item.foodmod.fish_sushi": "Fish Sushi"
 }
