--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -82,6 +82,8 @@
   "item.foodmod.fish_sushi": "Fish Sushi",
   "item.foodmod.rice": "Rice",
   "item.foodmod.vegetable_sushi": "Vegetable Sushi",
-  "item.foodmod.mango_sushi": "Mango Sushi"
+  "item.foodmod.mango_sushi": "Mango Sushi",
+  "item.foodmod.nigiri": "Nigiri",
+  "item.foodmod.egg_sushi": "Egg Sushi"
 
 }
