--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -90,6 +90,10 @@
   "item.foodmod.slush.tooltip": "Freezing Cold",
   "item.foodmod.orange_juice_class.tooltip": "Fresh and juicy!",
   "item.foodmod.peach_slush": "Peach Slush",
-  "item.foodmod.strawberry_slush": "Strawberry Slush"
-
+  "item.foodmod.strawberry_slush": "Strawberry Slush",
+  "item.foodmod.cup": "Cup",
+  "item.foodmod.hot_chocolate": "Hot Chocolate",
+  "item.foodmod.hot_chocolate.tooltip": "Warm and delicious!",
+  "item.foodmod.apple_juice": "Apple Juice",
+  "item.foodmod.apple_juice.tooltip": "Healthy and tasty!"
 }
