--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -106,5 +106,6 @@
   "item.foodmod.lemon": "Lemon",
   "item.foodmod.icetea_lemon": "IceTea Lemon",
   "item.foodmod.lemonade": "Lemonade",
-  "item.foodmod.lemonade.tooltip": "Fresh and prickling"
+  "item.foodmod.lemonade.tooltip": "Fresh and prickling",
+  "item.foodmod.lemon_slush": "Lemon Slush"
 }
