--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -107,5 +107,6 @@
   "item.foodmod.icetea_lemon": "IceTea Lemon",
   "item.foodmod.lemonade": "Lemonade",
   "item.foodmod.lemonade.tooltip": "Fresh and prickling",
-  "item.foodmod.lemon_slush": "Lemon Slush"
+  "item.foodmod.lemon_slush": "Lemon Slush",
+  "item.foodmod.orange_lemonade": "Orange Lemonade"
 }
