--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -108,5 +108,6 @@
   "item.foodmod.lemonade": "Lemonade",
   "item.foodmod.lemonade.tooltip": "Fresh and prickling",
   "item.foodmod.lemon_slush": "Lemon Slush",
-  "item.foodmod.orange_lemonade": "Orange Lemonade"
+  "item.foodmod.orange_lemonade": "Orange Lemonade",
+  "effect.foodmod.spicy": "Spicy"
 }
