--- a/src/main/resources/assets/foodmod/lang/en_us.json
+++ b/src/main/resources/assets/foodmod/lang/en_us.json
@@ -118,5 +118,6 @@
   "item.foodmod.spicy-medium.tooltip": "Very Spicy! Can kill you, if you aren't patient!",
   "item.foodmod.jalapeno": "Jalapeño",
   "item.foodmod.jalapeno_seeds": "Jalapeño Seeds",
-  "block.foodmod.jalapeno_crop": "Jalapeño Crop"
+  "block.foodmod.jalapeno_crop": "Jalapeño Crop",
+  "block.foodmod.seed_block": "Seed Block"
 }
